# SecScan

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md  CONFIGURATION.md  EXAMPLE.md
scripts/: scan-nano-node.sh
src/secscan/: __init__.py  __main__.py  architecture.py  architecture_hierarchical.py  cli.py  config.py  deps.py  filters.py  github.py  lenses.py  lmstudio_client.py  models.py  progress.py  prompts.py  repo_context.py  report.py  scanner.py  secrets_scan.py  synthesis.py  tui.py  verify.py
src/secscan/exploit/: __init__.py  poc.py  sandbox.py
tests/: test_architecture_hierarchical.py  test_deps.py  test_filters.py  test_json_extract.py  test_lenses.py  test_lmstudio_reload.py  test_parse_repo_url.py  test_repo_context.py  test_secrets_scan.py
