[project]
name = "secscan"
version = "0.1.0"
description = "Local-LLM-powered security scanner for GitHub repositories"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "textual>=0.60.0",
    "lmstudio>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "gitpython>=3.1.43",
    "pathspec>=0.12.1",
    "docker>=7.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "ruff>=0.4.0"]

[project.scripts]
secscan = "secscan.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/secscan"]

[tool.ruff]
line-length = 100
target-version = "py311"
